<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:orientation="vertical"
    android:padding="25dp">

    <!-- Name Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/label_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Phone Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/label_phone"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/phoneTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:inputType="phone"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Email Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/label_email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/emailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Street Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/label_street"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/streetTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- City Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/label_city"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/cityTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- State Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/label_state"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/stateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Zip Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/label_zip"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/zipTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:inputType="number"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
